# labeeb

./: .gitignore  .pre-commit-config.yaml  COMMERCIAL_LICENSE  LICENSE  README.md  TODO.md  commands.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.cursor/rules/: agent-architecture.mdc  architecture.mdc  capability-architecture.mdc  file-folder-arch.mdc  handler-architecture.mdc  model-architecture.mdc  protocol-architecture.mdc  rule-structure-standards.mdc  service-architecture.mdc  tool-architecture.mdc  workflow-architecture.mdc
.github/workflows/: ci.yml
config/: labeeb_config.json  output_paths.py  output_styles.json  settings.json
docs/architecture/: agentic_architecture.md  master_arch.md
docs/features/: file_operations.md  folder_operations.md  input_control.md  mouse_keyboard_control.md  screen_control.md
output/audio/: test_en.aiff
scripts/: audit_arch.py  audit_dependencies.py  audit_gitignore.py  audit_mitre_attack.py  audit_project.py  audit_reports_location.py  audit_research_dir.py  audit_security_patterns.py  audit_symlinks.py  audit_test_structure.py  check_translations.py  compile_translations.py  extract_strings.py  install.sh  launch.py  manage_translations.py  reorganize_project.py  requirements-audit.txt  tools_audit.py  update_imports.py
src/config/: settings.json
src/labeeb/: __init__.py  __main__.py  cli.py  io.py  license_check.py  logging_config.py  main.py  shell_handler.py  system_types.py
tests/: arabic_test.md  conftest.py  run_tests.py  test_calculator_automation.py  test_launchers.py  test_plugins.py  test_protocols.py  test_weather_agent_integration.py
tests/e2e/: test_commands.py
tests/files_and_folders_tests/: arabic_test_file.md  creative_test_ar.md  creative_test_en.md
tests/integration/: test_calculator_automation.py  test_tts_stt_workflow.py  test_weather_agent_integration.py  test_weather_plugin.py
tests/platform_core/: test_awareness.py
tests/services/: test_registry.py  test_security.py
(+497 files in other folders)
