[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labeeb"
version = "0.1.0"
description = "A cross-platform AI assistant with RTL and Arabic language support"
authors = [
    {name = "Labeeb Team", email = "team@labeeb.ai"}
]
dependencies = [
    "aioimaplib>=2.0.0",
    "aiomysql>=0.1.1",
    "aiosmtplib>=2.0.2",
    "opencv-python>=4.8.0",
    "dnspython>=2.4.2",
    "ffmpeg-python>=0.2.0",
    "soundfile>=0.12.1",
    "pywin32>=306; sys_platform == 'win32'",
    "PyYAML>=6.0.1",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "asyncio>=3.4.3",
    "typing-extensions>=4.5.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
macos = [
    "pyobjc-framework-CoreAudio>=9.2",
    "pyobjc-framework-AppKit>=9.2",
    "pyobjc-framework-Foundation>=9.2",
    "pyobjc-framework-IOBluetooth>=9.2",
    "pyobjc-framework-IOKit>=9.2"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=labeeb"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/labeeb"]

[tool.hatch.build.targets.sdist]
include = [
    "src/labeeb",
    "scripts",
    "docs",
    "tests"
] 